@@ -1,8 +1,9 @@
 \section{\class{wxPropertySheetDialog}}\label{wxpropertysheetdialog}
 
 This class represents a property sheet dialog: a tabbed dialog
-for showing settings. It is optimized to show with flat tabs
-on PocketPC devices.
+for showing settings. It is optimized to show flat tabs
+on PocketPC devices, and can be customized to use different
+controllers instead of the default notebook style.
 
 To use this class, call \helpref{wxPropertySheetDialog::Create}{wxpropertysheetdialogcreate} from your own
 Create function. Then call \helpref{CreateButtons}{wxpropertysheetdialogcreatebuttons}, and create pages, adding them to the book control.
@@ -29,6 +30,11 @@ bool MyPropertySheetDialog::Create(...)
 
 If necessary, override CreateBookCtrl and AddBookCtrl to create and add a different
 kind of book control. You would then need to use two-step construction for the dialog.
+Or, change the style of book control by calling \helpref{SetSheetStyle}{wxpropertysheetdialogsetsheetstyle} 
+before calling Create.
+
+The dialogs sample shows this class being used with notebook and toolbook controllers (for
+Windows-style and Mac-style settings dialogs).
 
 \wxheading{Derived from}
 
@@ -77,8 +83,9 @@ Call this from your own Create function, before adding buttons and pages.
 
 \func{virtual wxBookCtrlBase*}{CreateBookCtrl}{\void}
 
-Override this if you wish to create a different kind of book control; by default, a wxNotebook
-is created.
+Override this if you wish to create a different kind of book control; by default, the value
+passed to \helpref{SetSheetStyle}{wxpropertysheetdialogsetsheetstyle} is used to determine the control.
+The default behaviour is to create a notebook except on Smartphone, where a choicebook is used.
 
 \membersection{wxPropertySheetDialog::CreateButtons}\label{wxpropertysheetdialogcreatebuttons}
 
@@ -99,9 +106,16 @@ Returns the book control that will contain your settings pages.
 
 Returns the inner sizer that contains the book control and button sizer.
 
+\membersection{wxPropertySheetDialog::GetSheetStyle}\label{wxpropertysheetdialoggetsheetstyle}
+
+\constfunc{long}{GetSheetStyle}{\void}
+
+Returns the sheet style. See \helpref{SetSheetStyle}{wxpropertysheetdialogsetsheetstyle} for
+permissable values.
+
 \membersection{wxPropertySheetDialog::LayoutDialog}\label{wxpropertysheetdialoglayoutdialog}
 
-\func{void}{LayoutDialog}{\void}
+\func{void}{LayoutDialog}{\param{int}{ centreFlags=wxBOTH}}
 
 Call this to lay out the dialog. On PocketPC, this does nothing, since the dialog will be shown
 full-screen, and the layout will be done when the dialog receives a size event.
@@ -117,4 +131,23 @@ Sets the book control used for the dialog. You will normally not need to use thi
 \func{void}{SetInnerSizer}{\param{wxSizer*}{ sizer}}
 
 Sets the inner sizer that contains the book control and button sizer. You will normally not need to use this.
+
+\membersection{wxPropertySheetDialog::SetSheetStyle}\label{wxpropertysheetdialogsetsheetstyle}
+
+\func{void}{SetSheetStyle}{\param{long}{ style}}
+
+You can customize the look and feel of the dialog by setting the sheet style. It is
+a bit list of the following values:
+
+\twocolwidtha{5cm}
+\begin{twocollist}\itemsep=0pt
+\twocolitem{wxPROPSHEET\_DEFAULT}{Uses the default look and feel for the controller window,
+normally a notebook except on Smartphone where a choice control is used.}
+\twocolitem{wxPROPSHEET\_NOTEBOOK}{Uses a notebook for the controller window.}
+\twocolitem{wxPROPSHEET\_TOOLBOOK}{Uses a toolbook for the controller window.}
+\twocolitem{wxPROPSHEET\_CHOICEBOOK}{Uses a choicebook for the controller window.}
+\twocolitem{wxPROPSHEET\_LISTBOOK}{Uses a listbook for the controller window.}
+\twocolitem{wxPROPSHEET\_SHRINKTOFIT}{Shrinks the dialog window to fit the currently selected page (common behaviour for
+property sheets on Mac OS X).}
+\end{twocollist}
 
